# data-analyse-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  项目开发书.md
app/: __init__.py  main.py
app/agent/: __init__.py  artifacts.py  graph.py  models.py  planner.py  prompts.py  runtime.py  scope_router.py  state.py  tool_policy.py  tools.py
app/api/: chat.py  conversations.py  diagnostics.py  upload.py
app/schemas/: __init__.py  manifest.py  preprocessing.py  relationships.py
app/services/: analysis_service.py  chart_service.py  context_service.py  conversation_service.py  dataset_service.py  manifest_service.py  preprocessing_service.py  python_sandbox_service.py  relationship_service.py  sql_service.py  (+4 more)
docs/: dataset_failure_memory_v1_design.md
evals/: README.md  baseline_version.py
frontend/: app.js  index.html  style.css
research/: experiment_protocol.md
scripts/: generate_project_exam_pdfs.py  materialize_sqlite.py  test_chat_api.py  test_llm_api.py  verify_python_sandbox.py  verify_python_sandbox_service.py
tests/: test_artifact_store.py  test_baseline_protocol.py  test_context_service.py  test_conversation_service.py  test_diagnostics_api.py  test_planner_policy.py  test_preprocessing_service.py  test_python_analysis_tool.py  test_python_chart_events.py  test_python_sandbox_security.py  test_python_sandbox_service.py  test_relationship_service.py  test_runtime_tool_memory.py  test_scope_router.py  test_smoke.py  test_sql_service.py  test_sqlite_dataset_storage.py  test_tool_memory_service.py  test_tool_reason.py
(+25 files in other folders)
