[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-analyse-agent"
version = "0.1.0"
description = "A Python project skeleton for a data analysis agent."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "pydantic>=2.7",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "seaborn>=0.13",
    "tabulate>=0.9",
    "tiktoken>=0.7",
    "typer>=0.12",
    "uvicorn>=0.30",
    "xlrd>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
data-analyse-agent = "data_analyse_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
